# responsive-images

./: .gitignore  .hadolint.yaml  .markdownlintrc  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codacy.yml  docker.yml  python.yml  release.yml
app/: __init__.py  main.py
tools/templates/: gpl3.md.jinja2
